ENH: rename application, add test and avoid linking the target with itself

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -1,4 +1,4 @@
-OTB_CREATE_APPLICATION(NAME otbEmptyApp
+OTB_CREATE_APPLICATION(NAME EmptyApp
                        SOURCES otbEmptyApp.cxx
                        LINK_LIBRARIES ${${otb-module}_LIBRARIES}
 )
