--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -14,3 +14,8 @@ otb_module_target_label(otbEmptyTestDriver)
 
 otb_add_test(NAME otbDeleteMeEmptyTest
   COMMAND otbEmptyTestDriver otbEmptyTest "argument1" "..." )
+
+#test application
+otb_test_application(NAME otbEmptyAppTest
+                     APP  EmptyApp
+                     )
