--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,7 @@ set(ExternalTemplate_LIBRARIES ExternalTemplate)
 if(NOT OTB_SOURCE_DIR)
   find_package(OTB REQUIRED)
   list(APPEND CMAKE_MODULE_PATH ${OTB_CMAKE_DIR})
+  include(UseOTB)
   include(OTBModuleExternal)
 else()
   otb_module_impl()
