--- a/.travis.yml
+++ b/.travis.yml
@@ -16,8 +16,12 @@ matrix:
     compiler: gcc
     sudo: required
     before_install:
-      - sudo apt-get install -y ninja-build libglvnd-dev libglu1-mesa-dev
-      - sudo pip3 install numpy
+      - sudo apt-get install -y
+          ninja-build
+          libglvnd-dev
+          libglu1-mesa-dev
+          python3-dev
+          python3-numpy
     env:
       - OTB_OS=Linux64
   - os: osx
