--- a/.travis.yml
+++ b/.travis.yml
@@ -20,11 +20,11 @@ matrix:
           ninja-build
           libglvnd-dev
           libglu1-mesa-dev
-          python3-dev
           python3-numpy
     env:
       - OTB_OS=Linux64
   - os: osx
+    osx_image: xcode10.2
     compiler: clang
     before_install:
       - brew install ninja libomp
