--- a/.travis.yml
+++ b/.travis.yml
@@ -51,6 +51,6 @@ script:
   - find '/c/Program Files (x86)/Microsoft Visual Studio/2017' -name "vcvarsall.bat"
   - echo inside BuildTools/Common7/Tools
   - ls '/c/Program Files (x86)/Microsoft Visual Studio/2017/BuildTools/Common7/Tools'
-  - cmd.exe /s /c "call C:\\Program Files (x86)\\Microsoft Visual Studio\\2017\\BuildTools\\Common7\\Tools\\VsDevCmd.bat /help"
+  - cmd.exe /c 'call "C:\\Program Files (x86)\\Microsoft Visual Studio\\2017\\BuildTools\\Common7\\Tools\\VsDevCmd.bat" /help'
   - echo $PATH
   - ctest -VV -S ./ci.cmake
