--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,7 @@ if(NOT OTB_SOURCE_DIR)
   find_package(OTB REQUIRED)
   list(APPEND CMAKE_MODULE_PATH ${OTB_CMAKE_DIR})
   include(UseOTB)
+  include(GenerateExportHeaderCustom)
   include(OTBModuleExternal)
 else()
   otb_module_impl()
