--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ matrix:
           libglvnd-dev
           libglu1-mesa-dev
           python3-numpy
+          python3-dev
     env:
       - OTB_OS=Linux64
       - OTB_PKG_EXT=run
@@ -50,6 +51,7 @@ install:
   - if [ "$TRAVIS_OS_NAME" = "windows" ]; then source xdk/otbenv.bash ; fi
   - cp GenerateExportHeaderCustom.cmake xdk/lib/cmake/OTB-6.7
   - cp exportheader.cmake.in xdk/lib/cmake/OTB-6.7
+  - ctest -S xdk/share/otb/swig/build_wrapping.cmake -VV
 
 script:
   - ctest -VV -S ./ci.cmake
