--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,8 @@ if(NOT OTB_SOURCE_DIR)
   list(APPEND CMAKE_MODULE_PATH ${OTB_CMAKE_DIR})
   include(UseOTB)
   include(GenerateExportHeaderCustom)
+  set(Python_ADDITIONAL_VERSIONS "3")
+  find_package( PythonInterp REQUIRED)
   include(OTBModuleExternal)
 else()
   otb_module_impl()
