--- a/.travis.yml
+++ b/.travis.yml
@@ -38,7 +38,16 @@ matrix:
       - choco install python
       - choco install ninja
       - export PATH="/c/Python37:/c/ProgramData/chocolatey/lib/ninja/tools:$PATH"
-      - source setup_windows_env.sh
+      - /c/Python37/Scripts/pip install numpy
+      - eval "$(python vcvars_proxy.py
+        'c:/Program Files (x86)/Microsoft Visual Studio/2017/BuildTools/Common7/Tools/VsDevCmd.bat'
+        '-arch=amd64'
+        '-host_arch=amd64'
+        '-vcvars_ver=14.0')"
+      - export CC=cl.exe
+      - export CXX=cl.exe
+      - export CC_FOR_BUILD=cl.exe
+      - export CXX_FOR_BUILD=cl.exe
     env:
       - OTB_OS=Win64
       - OTB_PKG_EXT=zip
@@ -48,7 +57,11 @@ install:
   - wget ${OTB_URL}/${OTB_PKG}
   - if [ "$OTB_PKG_EXT" = "run" ]; then chmod +x ${OTB_PKG} ; ./${OTB_PKG} --target xdk ; fi
   - if [ "$OTB_PKG_EXT" = "zip" ]; then 7z x -y ${OTB_PKG} ; mv OTB-${OTB_VER}-${OTB_OS} xdk ; fi
-  - if [ "$TRAVIS_OS_NAME" = "windows" ]; then source xdk/otbenv.bash ; fi
+  - if [ "$TRAVIS_OS_NAME" = "windows" ]; then
+    source xdk/otbenv.bash;
+    else
+    source xdk/otbenv.profile;
+    fi
   - cp GenerateExportHeaderCustom.cmake xdk/lib/cmake/OTB-6.7
   - cp exportheader.cmake.in xdk/lib/cmake/OTB-6.7
   - ctest -S xdk/share/otb/swig/build_wrapping.cmake -VV
