COMP: linking to ApplicationEngine

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -1,6 +1,6 @@
 OTB_CREATE_APPLICATION(NAME EmptyApp
                        SOURCES otbEmptyApp.cxx
-                       LINK_LIBRARIES ${${otb-module}_LIBRARIES}
+                       LINK_LIBRARIES ${${otb-module}_LIBRARIES} ${OTBApplicationEngine_LIBRARIES}
 )
 
 
