DOC: enhance documentation about the template module

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,14 +1,20 @@
-cmake_minimum_required(VERSION 2.8.9)
+cmake_minimum_required(VERSION 3.10.2)
 project(ExternalTemplate)
 
+# This module create a library, with the same name as the module
 set(ExternalTemplate_LIBRARIES ExternalTemplate)
 
 if(NOT OTB_SOURCE_DIR)
+  # Handle the compilation outside OTB source tree: find where OTB is built/installed
   find_package(OTB REQUIRED)
   list(APPEND CMAKE_MODULE_PATH ${OTB_CMAKE_DIR})
   include(UseOTB)
+
+  # The Python interpreter is needed for Python tests
   set(Python_ADDITIONAL_VERSIONS "3")
   find_package( PythonInterp REQUIRED)
+
+  # This script will process the module sources
   include(OTBModuleExternal)
 else()
   otb_module_impl()
