--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,5 @@
-#${otb-module} will be the name of this module and will not need to be
-#changed when this module is renamed.
+# ${otb-module} will be the name of this module, and also the name of its
+# library. It will not need to be changed when this module is renamed.
 
 set(${otb-module}_SRC
 otbSomeFile.cxx
