--- a/.travis.yml
+++ b/.travis.yml
@@ -35,10 +35,10 @@ matrix:
       - OTB_PKG_EXT=run
   - os: windows
     before_install:
-      - choco install python
+      - choco install python --params "/InstallDir:C:\Python3"
       - choco install ninja
-      - export PATH="/c/Python37:/c/ProgramData/chocolatey/lib/ninja/tools:$PATH"
-      - /c/Python37/Scripts/pip install numpy
+      - export PATH="/c/Python3:/c/ProgramData/chocolatey/lib/ninja/tools:$PATH"
+      - /c/Python3/Scripts/pip install numpy
       - eval "$(python vcvars_proxy.py
         'c:/Program Files (x86)/Microsoft Visual Studio/2017/BuildTools/Common7/Tools/VsDevCmd.bat'
         '-arch=amd64'
